[package]
name = "remiss"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.63"
dotenv = "0.15.0"
envy = "0.4.2"
redmine-api = "0.1.8"
serde = { version = "1.0.144", features = ["derive"] }
url = "2.2.2"
xdg = "2.4.1"
