[package]
name = "remiss"
version = "0.2.0"
edition = "2021"
authors = ["Emil Thorenfeldt <emt@magenta.dk>"]
license = "MIT OR Apache-2.0"
keywords = ["redmine"]

[dependencies]
anyhow = "1.0.63"
dotenv = "0.15.0"
envy = "0.4.2"
redmine-api = "0.1.8"
serde = { version = "1.0.144", features = ["derive"] }
url = "2.2.2"
xdg = "2.4.1"
